# polis-duplicate-detection

./: .gitignore  README.md  docker-compose.yml  polis_duplicate_detection_feasibility.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
migrations/: 001_comment_embeddings.sql
scripts/: db-setup.sh
specs/001-duplicate-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-duplicate-detection/checklists/: requirements.md
specs/001-duplicate-detection/contracts/: openapi.yaml
src/: __init__.py
src/api/: errors.py  main.py  routes.py  schemas.py
src/config/: settings.py
src/models/: __init__.py
src/services/: check_service.py  db.py  embedding.py  similarity.py  storage.py  store_service.py
tests/integration/: test_check.py  test_errors.py  test_store.py
tests/unit/: test_embedding.py  test_similarity.py  test_thresholds.py
